k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-frontend
  namespace: homelab
  labels:
    app: ledger-frontend
    env: homelab
    managed-by: kubectl
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ledger-frontend
  template:
    metadata:
      labels:
        app: ledger-frontend
        env: homelab
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ledger-frontend
          image: localhost:30500/homelab/ledger-frontend:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
